--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         
         <div class="bio-card">
             <div class="photo">
-                <img src="https://via.placeholder.com/150" alt="Student Photo">
+                <img src="https://media.licdn.com/dms/image/C4D03AQFeTY3PgZ3gTw/profile-displayphoto-shrink_800_800/0/1549399691403?e=2147483647&v=beta&t=yIa40wnECXPKKK0HP3smNZHoh5XWxHjRsQ2gunyG2Yw" alt="Student Photo">
             </div>
             <div class="bio">
-                <h2>John Doe</h2>
-                <p>Hi, I'm John, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
+                <h2>Donovan Roberts</h2>
+                <p>Hi, I'm Donovan, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
             </div>
         </div>
 
         <div class="links">
-            <a href="https://github.com/username" target="_blank" class="link-btn">GitHub</a>
-            <a href="https://linkedin.com/in/username" target="_blank" class="link-btn">LinkedIn</a>
+            <a href="https://github.com/botbrains" target="_blank" class="link-btn">GitHub</a>
+            <a href="https://www.linkedin.com/in/dr27" target="_blank" class="link-btn">LinkedIn</a>
         </div>
     </div>
 
