--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <a href="https://www.linkedin.com/in/dr27" target="_blank" class="link-btn">LinkedIn</a>
         </div>
     </div>
-
+<script>
+    alert("Hello world");
+</script>
 </body>
 </html>
