Updated bio, image, button color, and added JavaScript alert

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="bio-card">
             <div class="photo">
-                <img src="https://media.licdn.com/dms/image/C4D03AQFeTY3PgZ3gTw/profile-displayphoto-shrink_800_800/0/1549399691403?e=2147483647&v=beta&t=yIa40wnECXPKKK0HP3smNZHoh5XWxHjRsQ2gunyG2Yw" alt="Student Photo">
+                <img src="/img/pic.jpeg" alt="Student Profile Picture">
             </div>
             <div class="bio">
                 <h2>Donovan Roberts</h2>
@@ -29,7 +29,7 @@
         </div>
     </div>
 <script>
-    alert("Hello world");
+    alert("Dev in progress");
 </script>
 </body>
 </html>
