--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             </div>
             <div class="bio">
                 <h2>Donovan Roberts</h2>
-                <p>Hi, I'm Donovan, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
+                <p>Hi, I'm Donovan. I am a student developer with a degree in Computer Information Technology from Western Kentucky University and currently learning to code with Code:YOU/Code Louisville!
+
+                    🔭 I’m currently working on learning to code.
+                    
+                    🌱 I’m currently learning webdev at CODE:Louisville!</p>
             </div>
         </div>
 
